<resources>
    <string name="app_name" translatable="false">Health Calculator</string>
    <string name="button0" translatable="false">0</string>
    <string name="button1" translatable="false">1</string>
    <string name="button2" translatable="false">2</string>
    <string name="button3" translatable="false">3</string>
    <string name="button4" translatable="false">4</string>
    <string name="button5" translatable="false">5</string>
    <string name="button6" translatable="false">6</string>
    <string name="button7" translatable="false">7</string>
    <string name="button8" translatable="false">8</string>
    <string name="button9" translatable="false">9</string>
    <string name="buttonAdd" translatable="false">+</string>
    <string name="buttonDecimalPoint" translatable="false">.</string>
    <string name="buttonDivide" translatable="false">/</string>
    <string name="buttonEquals" translatable="false">=</string>
    <string name="buttonMultiply" translatable="false">*</string>
    <string name="buttonSubtract" translatable="false">-</string>
    <string name="case3" translatable="false">18.6 - 25</string>
    <string name="case4" translatable="false">25.1 - 30</string>
    <string name="case5" translatable="false">30.1 - 35</string>
    <string name="case6" translatable="false">35.1 - 40</string>
    <string name="case7" translatable="false">40+</string>
    <string name="cm" translatable="false">cm</string>
    <string name="ml" translatable="false">ml</string>
    <string name="rang1" translatable="false">10 - 13</string>
    <string name="rang2" translatable="false">2 - 5</string>
    <string name="rang3" translatable="false">14 - 20</string>
    <string name="rang4" translatable="false">6 - 13</string>
    <string name="rang5" translatable="false">21 - 24</string>
    <string name="rang6" translatable="false">14 - 17</string>
    <string name="rang7" translatable="false">25 - 31</string>
    <string name="rang8" translatable="false">18 - 24</string>
    <string name="range1" translatable="false">2000 - 2100</string>
    <string name="range2" translatable="false">2700 - 2900</string>
    <string name="range3" translatable="false">1400 - 1800</string>
    <string name="range4" translatable="false">2200 - 2700</string>
    <string name="sixteen" translatable="false">-16</string>
    <string name="sixteen2eight" translatable="false">16 - 18.5</string>
    <string name="sixteenmin" translatable="false">16-</string>
    <string name="status_bar_notification_info_overflow" translatable="false">999+</string>
    <string name="_200" translatable="false">200</string>
    <string name="_2000" translatable="false">2000</string>
    <string name="_0" translatable="false">0</string>
    <string name="_200_220" translatable="false">200 - 220</string>
    <string name="_24" translatable="false">24</string>
    <string name="_20" translatable="false">20</string>
    <string name="_25" translatable="false">25</string>
    <string name="_30" translatable="false">30</string>
    <string name="_35" translatable="false">35</string>
    <string name="_40" translatable="false">40+</string>
    <string name="percent" translatable="false">%</string>
    <string name="hypen" translatable="false">-</string>
    <string name="buttonClear">Clear</string>
    <string name="calc">Calculator</string>
    <string name="calculate">Calculate</string>
    <string name="calorie_chart_header">Estimated Calorie Needs per Day, by Age, Sex, and Physical Activity Level</string>
    <string name="calorie_desc">Calculate your daily calorie requirements for weight gain/loss</string>
    <string name="calories">Calories for weight gain/loss</string>
    <string name="caloriesval">calories</string>
    <string name="cancel_text">Cancel</string>
    <string name="canidonate">Can I Donate?</string>
    <string name="canigiveblood_desc">‣ Male donors could be eligible to give blood at a maximum frequency of every 12 weeks (4 times per year) but normally less often.\n\n‣ Female donors could be eligible to give blood at a maximum frequency of every 16 weeks (3 times per year) but normally less often.\n\n‣ Women between the ages of 17 and 19 who weigh less than 10 stone 3lbs (65kg) and whose height is below 5 feet 6 inches (168cm) need to have their blood volume estimated before giving blood. Please see the chart below. If your blood volume is within the shaded area you will be unable to donate until after your 20th birthday.</string>
    <string name="category">Category</string>
    <string name="centimeters">Centimeters</string>
    <string name="chart">BMI chart</string>
    <string name="chart_calorie">Daily Calorie Chart</string>
    <string name="chart_giving_blood">Blood Volume Chart</string>
    <string name="chart_ovulation">Menstrual Cycle Calendar</string>
    <string name="chart_water">Daily Water Intake Chart</string>
    <string name="choosedate">Choose Date</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="connection_problem">Connection Problem!</string>
    <string name="cup">cup</string>
    <string name="dailywaterreq">Your daily water requirement is</string>
    <string name="datechoosen">Date Chosen :</string>
    <string name="day">Day</string>
    <string name="dec">December</string>
    <string name="dwrdesc">Take 2 – 3 glasses of water additionally if you exercise or if your environmental conditions are hot.</string>
    <string name="edddesc">The due date calculation is based on the average 28-day cycle.</string>
    <string name="edddesc2">This calculation is based on the average 28-day cycle.</string>
    <string name="eligibility_check">Eligibility to donate</string>
    <string name="enterblddon">Choose the date of last donation</string>
    <string name="entercm">You must be over 153 cm to calculate ideal weight</string>
    <string name="enterfeet">You must be over 5 feet to calculate ideal weight</string>
    <string name="enterpregdate">Choose the 1st day of your last menstrual period</string>
    <string name="essential">Essential % of fat</string>
    <string name="extremely_active">Very Hard</string>
    <string name="exunder">Extremely under weight</string>
    <string name="fat_chart">Body Fat Chart</string>
    <string name="fat_header">As you can see below, you have the body fat percentage chart for women and now men (below) that you need to input the numbers from your measurements using calipers.</string>
    <string name="feb">February</string>
    <string name="feets">Foot</string>
    <string name="female">Female</string>
    <string name="forearm">Forearm</string>
    <string name="ft">ft</string>
    <string name="gender">Gender</string>
    <string name="glasses">Glasses</string>
    <string name="go">Go</string>
    <string name="hard">Very Hard</string>
    <string name="healthy_weight_desc">Keep up the good work! For tips on maintaining a healthy weight, check out the food and diet and fitness sections.</string>
    <string name="healthy_weight_header">Healthy weight</string>
    <string name="heart_chart">Target Heart Rate Chart</string>
    <string name="heart_chart_desc">When you monitor your heart rate during physical exercise and stay within your target heart rate zone, you reap the most health benefits and lessen your risk of injury.</string>
    <string name="heart_desc">Pulse rate to target during aerobic exercise based on age</string>
    <string name="heartrate">Target Heart Rate</string>
    <string name="height">Height</string>
    <string name="hip">Hip</string>
    <string name="hour">Hour</string>
    <string name="ideal_chart">Ideal Weight Chart</string>
    <string name="idealweight">Ideal Weight</string>
    <string name="idealweight_desc">Weight that is believed to be maximally healthful for a person</string>
    <string name="in">in</string>
    <string name="inches">Inches</string>
    <string name="intensity">Workout Intensity :</string>
    <string name="iwc_header">The three most popular formulas for calculating ideal weight are the Devine, Robinson and Miller formulas.\n\nWeight in lbs (kg)</string>
    <string name="jan">January</string>
    <string name="jul">July</string>
    <string name="jun">June</string>
    <string name="kg">kg</string>
    <string name="kilograms">Kilograms</string>
    <string name="lbs">lbs</string>
    <string name="lightly_active">Little</string>
    <string name="litres">Liters</string>
    <string name="little_diff">Moderate</string>
    <string name="lose_weight">Lose Weight</string>
    <string name="maintain_weight">Maintain Weight</string>
    <string name="male">Male</string>
    <string name="mar">March</string>
    <string name="maxhrrate">Your maximun heart rate is</string>
    <string name="may">May</string>
    <string name="may_not_give">You may not give blood if:</string>
    <string name="may_not_give_desc">‣ You have had a serious illness or major surgery in the past or are currently on medication. The reason you are taking medication may prevent you from giving blood.\n\n‣ You have had complicated dental work. Simple fillings as ok after 24 hours; simple extractions are ok after 7 days.\n\n‣ You have been in contact with an infectious disease or have been given certain immunisation in the last 4 weeks.\n\n‣ You are presently on a hospital waiting list or undergoing medical tests.\n\n‣ You have got or had any heart conditions.\n\n‣ You do not weigh over 7stone 12lbs (50kgs). Please note, if you are female and aged between 17 and 19 years, weigh less than 10stone 3lbs (65kgs) and are less than 5’6” (168cm) in height, we need to confirm your estimated blood volume is over 3500ml.</string>
    <string name="men">Men</string>
    <string name="minute">Minute</string>
    <string name="moderate">Little</string>
    <string name="moderately_active">Moderate</string>
    <string name="moderately_diff">Hard</string>
    <string name="morbid">Morbid Obese</string>
    <string name="mr_button_content_description">Cast button</string>
    <string name="mr_cast_button_connected">Cast button. Connected</string>
    <string name="mr_cast_button_connecting">Cast button. Connecting</string>
    <string name="mr_cast_button_disconnected">Cast button. Disconnected</string>
    <string name="mr_cast_dialog_title_view_placeholder">No info available</string>
    <string name="mr_chooser_searching">Finding devices</string>
    <string name="mr_chooser_title">Cast to</string>
    <string name="mr_controller_album_art">Album art</string>
    <string name="mr_controller_casting_screen">Casting screen</string>
    <string name="mr_controller_close_description">Close</string>
    <string name="mr_controller_collapse_group">Collapse</string>
    <string name="mr_controller_disconnect">Disconnect</string>
    <string name="mr_controller_expand_group">Expand</string>
    <string name="mr_controller_no_info_available">No info available</string>
    <string name="mr_controller_no_media_selected">No media selected</string>
    <string name="mr_controller_pause">Pause</string>
    <string name="mr_controller_play">Play</string>
    <string name="mr_controller_stop">Stop</string>
    <string name="mr_controller_stop_casting">Stop casting</string>
    <string name="mr_controller_volume_slider">Volume slider</string>
    <string name="mr_dialog_device_header">Cast to a device</string>
    <string name="mr_dialog_route_header">Play on a group</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="neck">Neck</string>
    <string name="no_net_message">Internet connection not established</string>
    <string name="reset">Reset</string>
    <string name="rhr">Resting heart rate :</string>
    <string name="enter_value">Enter value</string>
    <string name="todo">TODO</string>
    <string name="age">Age :</string>
</resources>