<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/mAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:theme="@style/ToolbarTheme">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/todo"
                    android:scaleX="-1"
                    android:src="@drawable/arrow_pink" />


                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/popind_regular"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="@string/ideal_chart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:background="@drawable/bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/tv1"
                style="@style/AppTheme.fontstylesRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/canigiveblood_desc"
                android:textColor="?attr/colorPrimary"
                android:textDirection="locale"
                android:textSize="@dimen/font_size_14" />

            <Button
                android:id="@+id/chart"
                style="@style/AppTheme.fontstylesRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/edittextstyle_blue"
                android:text="@string/chart_giving_blood"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_14" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>
