<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/mAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:theme="@style/ToolbarTheme">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/todo"
                    android:scaleX="-1"
                    android:src="@drawable/arrow_yellow" />


                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/popind_regular"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="@string/ideal_chart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:background="@drawable/bg"
        android:scrollbars="none">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="@dimen/card_elevation">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/layout_padding"
                    tools:ignore="UselessParent">


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="0dp"
                        app:cardElevation="0dp">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/card_padding"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                android:weightSum="2">

                                <TextView
                                    android:id="@+id/tvGender"
                                    style="@style/AppTheme.fontstylesRegular"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/gender"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                    android:textColor="@color/txt_black"
                                    android:textDirection="locale" />

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1">

                                    <Spinner
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:textSize="@dimen/font_size_14"
                                        android:visibility="gone"
                                        tools:ignore="TooDeepLayout" />

                                    <com.weiwangcn.betterspinner.library.BetterSpinner
                                        android:id="@+id/genderSp"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                        android:textColor="?attr/colorPrimary" />

                                    <ImageView
                                        android:id="@+id/imageDown"
                                        android:layout_width="@dimen/dropdown_size"
                                        android:layout_height="@dimen/dropdown_size"
                                        android:layout_alignParentEnd="true"
                                        android:layout_centerVertical="true"
                                        android:contentDescription="@string/todo"
                                        android:src="@drawable/ic_arrow_drop_down_black_24dp"
                                        android:visibility="gone" />
                                </RelativeLayout>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tvAge"
                                    style="@style/AppTheme.fontstylesRegular"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="12dp"
                                    android:gravity="start"
                                    android:text="@string/age"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                    android:textColor="@color/txt_black"
                                    android:textDirection="locale" />


                                <EditText
                                    android:id="@+id/edAge"
                                    style="@style/AppTheme.fontstylesRegular"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="12dp"
                                    android:ems="10"
                                    android:gravity="start"
                                    android:hint="@string/age"
                                    android:inputType="number"
                                    android:textColor="?attr/colorPrimary"
                                    android:textColorHint="?attr/colorPrimary"
                                    android:textDirection="locale"
                                    android:textSize="@dimen/font_size_14"
                                    tools:ignore="Autofill" />
                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:orientation="vertical">


                                <TextView
                                    android:id="@+id/tvRhr"
                                    style="@style/AppTheme.fontstylesRegular"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="12dp"
                                    android:gravity="start"
                                    android:text="@string/rhr"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                    android:textColor="@color/txt_black"
                                    android:textDirection="locale" />

                                <EditText
                                    android:id="@+id/edRhr"
                                    style="@style/AppTheme.fontstylesRegular"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="6dp"
                                    android:ems="10"
                                    android:gravity="start"
                                    android:hint="@string/enter_value"
                                    android:inputType="number"
                                    android:textColor="?attr/colorPrimary"
                                    android:textColorHint="?attr/colorPrimary"
                                    android:textDirection="locale"
                                    android:textSize="@dimen/font_size_14"
                                    tools:ignore="Autofill" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginTop="6dp"
                                    android:gravity="center_vertical"
                                    android:orientation="horizontal"
                                    android:weightSum="2">

                                    <TextView
                                        android:id="@+id/tvActivity"
                                        style="@style/AppTheme.fontstylesRegular"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="@string/intensity"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                        android:textColor="@color/txt_black"
                                        android:textDirection="locale" />

                                    <RelativeLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1">


                                        <com.weiwangcn.betterspinner.library.BetterSpinner
                                            android:id="@+id/activitySp"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                            android:textColor="?attr/colorPrimary" />

                                        <ImageView
                                            android:layout_width="@dimen/dropdown_size"
                                            android:layout_height="@dimen/dropdown_size"
                                            android:layout_alignParentEnd="true"
                                            android:layout_centerVertical="true"
                                            android:contentDescription="@string/todo"
                                            android:src="@drawable/ic_arrow_drop_down_black_24dp"
                                            android:visibility="gone" />
                                    </RelativeLayout>


                                </LinearLayout>

                            </LinearLayout>


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="12dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="0dp"
                        android:weightSum="2">

                        <Button
                            android:id="@+id/calc"
                            style="@style/AppTheme.fontstylesRegular"
                            android:layout_width="0dp"
                            android:layout_height="36dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_weight="1"
                            android:text="@string/calculate"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/white" />

                        <Button
                            android:id="@+id/reset"
                            style="@style/AppTheme.fontstylesRegular"
                            android:layout_width="0dp"
                            android:layout_height="36dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_weight="1"
                            android:text="@string/reset"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="?attr/colorPrimary" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/chart"
                        style="@style/AppTheme.fontstylesRegular"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginBottom="12dp"
                        android:text="@string/heart_chart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
